testdata/baselines/reference/submodule/compiler/jsdocCallbackAndType.errors.txt
/a.js(5,12): error TS8010: Type annotations can only be used in TypeScript files.
/a.js(8,3): error TS2554: Expected 0 arguments, but got 1.


==== /a.js (2 errors) ====
    /**
     * @template T
     * @callback B
     */
    /** @type {B<string>} */
               ~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    let b;
    b();
    b(1);
      ~
!!! error TS2554: Expected 0 arguments, but got 1.
    